feat: zkflash gif

--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 
 <body>
   <div id="rootx">
-    <p>hello</p>
-    <p>world</p>
+    <p>static hello</p>
+    <br />
+
+    <div id="abc" style="position: relative;">
+      <p style="position:absolute">position:absolute</p>
+      <p>world</p>
+    </div>
+    <br />
     <span>the quick</span>
     <span>brown fox</span>
     <span style="color:red">jump</span>
+    <p style="position:fixed">position:fixed</p>
+
   </div>
   <script type="module" src="/src/index.tsx"></script>
 </body>
