--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <p style="position:fixed">position:fixed</p>
 
   </div>
+  <div id="fe-devtools-root"></div>
   <script type="module" src="/src/index.tsx"></script>
 </body>
 
